[package]
name = "datasetgenv2"
version = "0.2.0"
edition = "2021"
[dependencies]
rand = "0.8"
once_cell = "1.19"
regex = "1"
serde = { version = "1", features =["derive"] }
proc-macro2 = "1"
serde_json = "1"
walkdir = "2"
rayon = "1"
syn = { version = "2", features = ["full", "parsing", "printing"] }
quote = "1"
tempfile = "3"
prettyplease = "0.2"
similar = "2"